fix(settings): scrollbar

--- a/src/pages/settings/Settings.module.scss
+++ b/src/pages/settings/Settings.module.scss
@@ -47,7 +47,7 @@
         &::-webkit-scrollbar-thumb {
             min-height: 150px;
             border-top: 56px solid transparent;
-            border-bottom: var(--bottom-navigation-height) solid transparent;
+            //border-bottom: var(--bottom-navigation-height) solid transparent;
         }
     }
 
